fix: dark mode hex color refactor:

--- a/src/pages/landing/style.css
+++ b/src/pages/landing/style.css
@@ -20,7 +20,7 @@
     gap: 1rem;
   }
   .App-header-dark {
-    background-color: ##0f0f0f;
+    background-color: #0f0f0f;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
